oc command line changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,7 +70,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Log in to OpenShift
+    - name: Set Up OpenShift CLI
+      run: |
+        curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz
+        tar -xzf oc.tar.gz
+        chmod +x oc
+        sudo mv oc /usr/local/bin/
+        oc version
+
+    - name: Login to OpenShift
       run: |
         oc login --token=${{ secrets.OPENSHIFT_TOKEN }} --server=${{ secrets.OPENSHIFT_SERVER }}
         oc project ${{ secrets.OPENSHIFT_PROJECT }}
