using deployment.yaml

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,3 +1,72 @@
+apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-secret
+type: Opaque
+data:
+  mysql-root-password: cGFzc3dvcmQ=   # "password" base64 encoded
+  mysql-user: dXNlcg==               # "user" base64 encoded
+  mysql-password: cGFzc3dvcmQ=        # "password" base64 encoded
+
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: mysql
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: mysql
+  template:
+    metadata:
+      labels:
+        app: mysql
+    spec:
+      containers:
+        - name: mysql
+          image: mysql:8
+          ports:
+            - containerPort: 3306
+          env:
+            - name: MYSQL_ROOT_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-root-password
+            - name: MYSQL_DATABASE
+              value: banking_portal
+            - name: MYSQL_USER
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-user
+            - name: MYSQL_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-password
+          volumeMounts:
+            - name: mysql-pv-storage
+              mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-pv-storage
+          emptyDir: {}
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql
+spec:
+  selector:
+    app: mysql
+  ports:
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -21,9 +90,20 @@ spec:
             - name: SPRING_DATASOURCE_URL
               value: jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
             - name: SPRING_DATASOURCE_USERNAME
-              value: user
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-user
             - name: SPRING_DATASOURCE_PASSWORD
-              value: password
+              valueFrom:
+                secretKeyRef:
+                  name: mysql-secret
+                  key: mysql-password
+            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
+              value: update
+            - name: SPRING_JPA_DATABASE_PLATFORM
+              value: org.hibernate.dialect.MySQL8Dialect
+
 ---
 apiVersion: v1
 kind: Service
@@ -35,6 +115,7 @@ spec:
       targetPort: 8081
   selector:
     app: banking-portal-api
+
 ---
 apiVersion: route.openshift.io/v1
 kind: Route
