--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,35 +56,35 @@ jobs:
         docker push ${{ secrets.OPENSHIFT_REGISTRY }}/${{ secrets.OPENSHIFT_PROJECT }}/${{ secrets.IMAGE_NAME }}:latest
         docker push ${{ secrets.OPENSHIFT_REGISTRY }}/${{ secrets.OPENSHIFT_PROJECT }}/${{ secrets.IMAGE_NAME }}:${{ github.sha }}
 
-    # - name: Deploy to OpenShift
-    #   run: |
-    #     oc login --token=${{ secrets.OPENSHIFT_TOKEN }} --server=${{ secrets.OPENSHIFT_SERVER }}
-    #     oc apply -f deployment.yaml
-
-    # - name: Restart Deployment
-    #   run: |
-    #     oc rollout restart deployment/banking-portal-api        
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Set Up OpenShift CLI
-      run: |
-        curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz
-        tar -xzf oc.tar.gz
-        chmod +x oc
-        sudo mv oc /usr/local/bin/
-        oc version
-
-    - name: Login to OpenShift
-      run: |
-        oc login --token=${{ secrets.OPENSHIFT_TOKEN }} --server=${{ secrets.OPENSHIFT_SERVER }}
-        oc project ${{ secrets.OPENSHIFT_PROJECT }}
-
     - name: Deploy to OpenShift
       run: |
-        oc delete dc banking-portal-api --ignore-not-found=true
-        oc new-app ${{ secrets.OPENSHIFT_REGISTRY }}/${{ secrets.OPENSHIFT_PROJECT }}/${{ secrets.IMAGE_NAME }}:latest --name=banking-portal-api
-        oc expose svc/banking-portal-api
+        oc login --token=${{ secrets.OPENSHIFT_TOKEN }} --server=${{ secrets.OPENSHIFT_SERVER }}
+        oc apply -f deployment.yaml
+
+    - name: Restart Deployment
+      run: |
+        oc rollout restart deployment/banking-portal-api        
+
+  # deploy:
+  #   needs: build
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #   - name: Set Up OpenShift CLI
+  #     run: |
+  #       curl -LO https://mirror.openshift.com/pub/openshift-v4/clients/oc/latest/linux/oc.tar.gz
+  #       tar -xzf oc.tar.gz
+  #       chmod +x oc
+  #       sudo mv oc /usr/local/bin/
+  #       oc version
+
+  #   - name: Login to OpenShift
+  #     run: |
+  #       oc login --token=${{ secrets.OPENSHIFT_TOKEN }} --server=${{ secrets.OPENSHIFT_SERVER }}
+  #       oc project ${{ secrets.OPENSHIFT_PROJECT }}
+
+  #   - name: Deploy to OpenShift
+  #     run: |
+  #       oc delete dc banking-portal-api --ignore-not-found=true
+  #       oc new-app ${{ secrets.OPENSHIFT_REGISTRY }}/${{ secrets.OPENSHIFT_PROJECT }}/${{ secrets.IMAGE_NAME }}:latest --name=banking-portal-api
+  #       oc expose svc/banking-portal-api
