--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=8081
 spring.datasource.url=jdbc:h2:mem:bankingapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=password
@@ -11,7 +11,7 @@ spring.main.allow-circular-references=true
 server.error.include-message=always
 
 # JWT
-jwt.secret=your-secret-key
+jwt.secret=bankingportal
 # Token expiration time in milliseconds (e.g., 24 hours)
 jwt.expiration=86400000
 jwt.header=Authorization
