--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8080
-spring.datasource.url=jdbc:h2:mem:bankingapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.port=8081
+spring.datasource.url=jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=cGFzc3dvcmQ=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
@@ -16,4 +16,3 @@ jwt.secret=bankingportal
 jwt.expiration=86400000
 jwt.header=Authorization
 jwt.prefix=Bearer
-
