--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://172.30.118.129:3306/banking_portal?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=cGFzc3dvcmQ=
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
