--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://172.30.118.129:3306/banking_portal?serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,6 +9,10 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 server.error.include-message=always
+
+# Enable logging for better debugging
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # JWT
 jwt.secret=bankingportal
