--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 server.error.include-message=always
-
+spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 # Enable logging for better debugging
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
