--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8081
-spring.datasource.url=jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
