--- a/deployment.yaml
+++ b/deployment.yaml
@@ -90,7 +90,7 @@ spec:
             - containerPort: 8080
           env:
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&useSSL=false
+              value: jdbc:mysql://mysql:3306/banking_portal?serverTimezone=UTC&allowPublicKeyRetrieval=true&useSSL=false
             - name: SPRING_DATASOURCE_USERNAME
               valueFrom:
                 secretKeyRef:
